# MarketGemini

./: .gitignore  MarketGemini_Business_Source_License.txt  README.md  ROADMAP_MarketGemini.md  conftest.py  pyproject.toml  pytest.ini  readme.md  requirements.txt
backend/: alembic.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 407c43cff4a8_baseline.py
backend/app/: db.py  init_db.py  main.py  models.py  router_chat.py  schemas.py
backend/app/db/: __init__.py  identity_service.py  init_db.py  models.py  session.py
backend/app/providers/: deepseek_provider.py  gemini_provider.py
backend/app/routing/: deepseek_classifier.py  deepseek_pricing.py  deepseek_provider.py  prompt_helpers.py
backend/app/schemas/: __init__.py  auth.py  core.py  digest.py  identity.py  init.py
data/public/series/: gold.json
marketgemini/backend/: requirements.txt
src/marketgemini_router/: app.py  db_init.sql  memory.db  models.py  router.yml
tests/: conftest.py
tests/auth_oidc/: test_oidc_pkce.py
tests/integration/: test_anomaly_api.py  test_api_unittest.py  test_auth_api.py  test_series_anomaly.py
tests/router/: test_gemini_adapter_live.py  test_gemini_adapter_unit.py  test_router_gemini_live.py
tests/unit/: test_detect.py  test_detect_unittest.py  test_timeseries.py  test_timeseries_unittest.py
tools/: getGoogle_idtoken.html  get_idtoken.py
ui/marketgemini-web/: README.md  angular.json  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.spec.json
ui/router-lab/: index.html  package-lock.json  package.json
(+86 files in other folders)
